--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#reserveForm" type="button" class="btn btn-warning btn-sm btn-block p-2"><strong>Reserve Table</strong></a>
                 </div>
             </div>
         </div>
@@ -56,7 +59,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center"
                             src="img/uthappizza.png" alt="Uthappizza">
                     <div class="media-body">
-                        <h2 class="mt-0">Uthappizza</h2>
+                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                             Italian pizza, topped with Cerignola olives, ripe vine
                             cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -73,8 +76,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2><p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="Weekend Grand Buffet">
+                </div>
             </div>
         </div>
 
@@ -99,7 +107,44 @@
                 
             </div>
         </div>
+        <div id="reserveForm">
+        <div class="row row-content">
+        <div class="col-12 offset-sm-2 col-sm-8 align-self-center">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label">Number of Guests</label>
+                        <div class="col">
+                                <label class="radio-inline"><input type="radio" name="optradio"> 1</label>&nbsp;&nbsp;
+                                <label class="radio-inline"><input type="radio" name="optradio"> 2</label>&nbsp;&nbsp;
+                                <label class="radio-inline"><input type="radio" name="optradio"> 3</label>&nbsp;&nbsp;
+                                <label class="radio-inline"><input type="radio" name="optradio"> 4</label>&nbsp;&nbsp;
+                                <label class="radio-inline"><input type="radio" name="optradio"> 5</label>&nbsp;&nbsp;
+                                <label class="radio-inline"><input type="radio" name="optradio"> 6</label>
+                        </div>
+                    </div>
+                        <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                        <div class="col-4 col-md-4">
+                            <input type="dt" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-4 col-md-4">
+                            <input type="dt" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+</div>
+
 
     <footer class="footer">
         <div class="container">
